# human-decision-journal

./: .gitignore  README.md  RULES.md  config.example.toml  pyproject.toml  work-vocab.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: AUTHORSHIP-REPORT.md  CATEGORIZATION.md  COVERAGE-REPORT.md  DIVISION-OF-LABOR.md  PERIOD-SUMMARY.md
docs/superpowers/plans/: 2026-06-18-categorization-addon.md  2026-06-18-coverage-report.md  2026-06-18-period-summary.md  2026-06-19-division-of-labor.md
examples/: DECISIONS_JOURNAL.sample.md  scratch2.md
human_decision_journal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: scan.py
server/: categorize.py  config.py  coverage.py  digest.py  gitops.py  journal.py  labor.py  main.py  ownership.py  privacy.py  report.py  service.py  timeline.py  vocab.py
server/addons/: categorization.RULES.md  categorization.py
tests/: test_categorize.py  test_config.py  test_coverage.py  test_digest.py  test_gitops.py  test_journal.py  test_labor.py  test_main_smoke.py  test_ownership.py  test_privacy.py  test_report.py  test_scan_cli.py  test_service.py  test_timeline.py  test_vocab.py
