[project]
name = "human-decision-journal"
version = "0.1.0"
description = "MCP engine that maintains a private Decisions Journal across AI tools"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0", "filelock>=3.13"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
human-decision-journal = "server.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
